methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:41: error: Unmatched closing brace '}' ignored here
  }
  ^